Closed
Bug 522659
Opened 16 years ago
Closed 16 years ago
Windows 7 taskbar previews does not give right click menu
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | .7-fixed |
People
(Reporter: ferdinand.hertog, Assigned: robarnold)
References
Details
Attachments
(2 files)
|
71.67 KB,
image/png
|
Details | |
|
2.22 KB,
patch
|
jimm
:
review+
dveditz
:
approval1.9.2.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20091015 Minefield/3.7a1pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20091015 Minefield/3.7a1pre
In previous Windows versions you could right click on a program in the taskbar to get a menu with:Restore, Move, Size, Minimize, Maximize, Close. In Windows 7 this is removed and you now have to hover over the program to get a preview and right click the preview to get the same menu. The new "Windows 7 taskbar previews" don't give that menu anymore and just do the same as a left click.
Reproducible: Always
Steps to Reproduce:
1.use Firefox build with Windows 7 Taskbar Previews
2.hover over Firefox program in taskbar
3.right click one of the previews
Actual Results:
No menu
Expected Results:
Menu with:Restore, Move, Size, Minimize, Maximize, Close
Confirming on Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20091103 Minefield/3.7a1pre
Comment 2•16 years ago
|
||
I think it should be resolved invalid, as Jumplists are the new context menu with some of those items on it.
Comment 3•16 years ago
|
||
Or are you saying, when you do aero peek preview on firefox, then right click a preview, it should show the old context menu? How does that compare with other programs?
(In reply to comment #3)
> Or are you saying, when you do aero peek preview on firefox, then right click a
> preview, it should show the old context menu? How does that compare with other
> programs?
I believe he means this. Every other program I've seen that has these previews has the menu described. I think this is related to not using WS_SYSMENU on our previews.
Component: Shell Integration → Widget: Win32
Product: Firefox → Core
QA Contact: shell.integration → win32
| Assignee | ||
Comment 5•16 years ago
|
||
IE8 and other programs have a context menu when you right click. I am seeing one for our tab previews as well. Unfortunately, they don't seem to be hooked up to anything so although you can select options, nothing happens (though this should be easy to fix). I am seeing the menu however so I cannot confirm what the reporter is seeing.
What I mean is that when you see the live preview you cannot get the rightclick menu to use maximize. When I reported this the 3.7 nightlies had a livepreview per tab but this has been disabled at the moment. So if you right click on a preview now it shows the menu and allows to click maximize.
With internet explorer, right-clicking on the preview gives the options shown in the screenshot. With Minefield, right-click on the preview brings that tab to focus and no context menu.
Comment 8•16 years ago
|
||
Gotcha.. makes sense now, aero peek tab preview right-click context menu is missing or non-functional.
Comment 9•16 years ago
|
||
I noticed I could always see the context menu on the download window aero peek preview, but not on either of tab previews for browser window.
So browser window tab preview context windows have this behavior:
If I right click on a browser window tab preview, it cancels aero peek tab preview panel altogether and goes back to the browser window rather than showing the old context menu, with items mentioned in comment 0 for expected results.
| Assignee | ||
Comment 10•16 years ago
|
||
(In reply to comment #8)
> Gotcha.. makes sense now, aero peek tab preview right-click context menu is
> missing or non-functional.
I'd like to figure out which one it is. For me, it is not missing from the thumbnails but it is non-functional. It is also important to know if you have the Beta, the RC or the RTM version of Windows 7 as there are behavioral differences and bug fixes in RTM vs the Beta/RC.
(In reply to comment #9)
> I noticed I could always see the context menu on the download window aero peek
> preview, but not on either of tab previews for browser window.
>
> So browser window tab preview context windows have this behavior:
>
> If I right click on a browser window tab preview, it cancels aero peek tab
> preview panel altogether and goes back to the browser window rather than
> showing the old context menu, with items mentioned in comment 0 for expected
> results.
Let me see if I understand this last bit. When you right click on a tab preview, it's as if you left clicked?
I've noticed that once you've right clicked on a thumbnail (any thumbnail - tab or window), a subsequent right click on any thumbnail will dismiss the entire row of them. But I don't think that this is what you are reporting the bug is.
Comment 11•16 years ago
|
||
(In reply to comment #10)
> (In reply to comment #8)
> > Gotcha.. makes sense now, aero peek tab preview right-click context menu is
> > missing or non-functional.
>
> I'd like to figure out which one it is. For me, it is not missing from the
> thumbnails but it is non-functional. It is also important to know if you have
> the Beta, the RC or the RTM version of Windows 7 as there are behavioral
> differences and bug fixes in RTM vs the Beta/RC.
>
I'm still on RC, testing latest trunk. If RTM fixes it, that would be great. I notice no context menu (missing) on the browser window previews (using RC), though, still hard to tell if all items are working properly or as expected (non-functional?), when the context menu shows for the download window preview.
> (In reply to comment #9)
> > I noticed I could always see the context menu on the download window aero peek
> > preview, but not on either of tab previews for browser window.
> >
> > So browser window tab preview context windows have this behavior:
> >
> > If I right click on a browser window tab preview, it cancels aero peek tab
> > preview panel altogether and goes back to the browser window rather than
> > showing the old context menu, with items mentioned in comment 0 for expected
> > results.
>
> Let me see if I understand this last bit. When you right click on a tab
> preview, it's as if you left clicked?
>
> I've noticed that once you've right clicked on a thumbnail (any thumbnail - tab
> or window), a subsequent right click on any thumbnail will dismiss the entire
> row of them. But I don't think that this is what you are reporting the bug is.
No, the left click will trigger the select tab preview action. The right click is the same as if you had moved the mouse off the row of previews, it actually is not giving focus like the left click. I tested previews of hidden tabs to verify this. I think we're describing similar behavior, with exception to the download window.
To say another way,
If I right click and get the context menu, and choose a context menu action, some action maybe taken and then the row of previews are dismissed (aero peek preview panel). If I right click and don't see a context menu item, the row of previews (aero peek preview panel) are also dismissed.
<off topic>
Man.. it would be nice if we had a lingo reference dictionary on bugzilla, that would popup on a click of button to choose the right phrase.. for whatever you were describing!
</off topic>
Comment 12•16 years ago
|
||
I'm using RTM and do no get a right-click context menu. Right-clicking acts as a left-click.
Comment 13•16 years ago
|
||
> No, the left click will trigger the select tab preview action. The right click
> is the same as if you had moved the mouse off the row of previews, it actually
> is not giving focus like the left click. I tested previews of hidden tabs to
> verify this. I think we're describing similar behavior, with exception to the
> download window.
Yeah, that's it. Left click isn't working as right click. When cursor navigated it shows preview as it supposed to do and when right click is clicked it dismisses preview and goes back to your last viewing window.
when tested with other browsers or explorer it stays on preview mode and shows drop-down menu.
Comment 14•16 years ago
|
||
(In reply to comment #13)
>(In reply to comment #12)
>> I'm using RTM and do no get a right-click context menu. Right-clicking acts as
>> a left-click.
>
> when right click is clicked it dismisses preview and goes back to your last
> viewing window.
Kurt, can you confirm on RTM the same or do you see a behavior change from RC? [which RTM is more important than RC]
Comment 15•16 years ago
|
||
Dale, I was using and only have used RTM.
Hardware: x86_64 → All
Version: unspecified → Trunk
Comment 16•16 years ago
|
||
I just want to confirm that I also get this bug.
When I hover over the Minefield icon on my taskbar I get the aero peek tiles as with all other programs.
But when I right click any of the tiles the preview just closes in stead of giving me the right click menu as all other programs do.
I use this method to minimise the window so it is a little disappointing that it doesn't work with Minefield.
| Reporter | ||
Comment 17•16 years ago
|
||
Today's build: 3.7a2 20100209 works for me. It gives the right click menu and lets me maximize, move etc.
I don't know if I have to mark it resolved or that one of the developers marks it fixed?
Comment 18•16 years ago
|
||
Ferdinand: I'm using the same build and cannot confirm this now WFM.
| Assignee | ||
Comment 19•16 years ago
|
||
Unfortunately the process of adding the WS_SYSMENU introduces a flicker that we tried to avoid in bug 520807: you can briefly see the favicon while the DWM waits for the preview image. I don't know how to resolve this - I think we're going to get some sort of temporary visual glitch no matter what we do.
| Reporter | ||
Comment 20•16 years ago
|
||
I am sorry but I was probably being stupid. I think Firefox's tab aero peak was disabled so Win7 just gives you the menu instead of Firefox.
Updated•16 years ago
|
Attachment #426263 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 21•16 years ago
|
||
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/06ca9ff9d094
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 22•16 years ago
|
||
Verified fixed using hourly build Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100309 Minefield/3.7a3pre ID:20100309211739
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 23•16 years ago
|
||
It is not fixed
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100309 Minefield/3.7a3pre
Comment 24•16 years ago
|
||
(In reply to comment #23)
> It is not fixed
> Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100309
> Minefield/3.7a3pre
I'm using an hourly build from around 9:15pm not the nightly that is released around 4/5/6am. Test again with tomorrows nightly.
| Assignee | ||
Updated•16 years ago
|
Attachment #426263 -
Flags: approval1.9.2.3?
| Assignee | ||
Updated•16 years ago
|
status1.9.2:
--- → ?
Comment 25•15 years ago
|
||
Comment on attachment 426263 [details] [diff] [review]
Forward WM_SYSCOMMAND messages to parent, add WS_SYSMENU
a=LegNeato for 1.9.2.5. Please ONLY land this on mozilla-1.9.2 default, as we are still working on 1.9.2.4 on the relbranch
Attachment #426263 -
Flags: approval1.9.2.4? → approval1.9.2.5+
Updated•15 years ago
|
Attachment #426263 -
Flags: approval1.9.2.5+ → approval1.9.2.6+
Comment 26•15 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•