Bug 522659 - Windows 7 taskbar previews does not give right click menu r=jmathies